--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,15 @@
-body {
-  background: rgb(47, 199, 123);
-  background: linear-gradient(0deg, rgba(47, 199, 123, 1) 0%, rgba(0, 232, 255, 1) 61%, rgba(255, 255, 255, 0) 84%);
+#app {
+  margin: 0;
+  background-color: #F4D03F;
+  background-image: linear-gradient(132deg, #F4D03F 0%, #16A085 100%);
+
+}
+.column {
+  text-shadow: 1px;
 }
 
-* {
-  text-shadow: 1px;
+.quote p{
+  line-height: 2em !important;
+  font-size: 1.2em;
+  font-weight: 700;
 }
